--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -22,7 +22,7 @@
                             <a href="/our-team">Our Team</a>
                         </li>
                         <li class="menu-list">
-                            <a href="#">Career</a>
+                            <a href="/career">Career</a>
                         </li>
                     </ul>
                 </div>
@@ -122,16 +122,16 @@
         <div class="footer_mobile_menu_wrap mobile">
             <ul class="footer-mobile-menu">
                 <li class="mobile-list">
-                    <a href="#">About us</a>
+                    <a href="/about">About us</a>
                 </li>
                 <li class="mobile-list">
-                    <a href="#">Our team</a>
+                    <a href="/our-team">Our team</a>
                 </li>
                 <li class="mobile-list">
-                    <a href="#">Career</a>
+                    <a href="/career">Career</a>
                 </li>
                 <li class="mobile-list">
-                    <a href="#">Blogs</a>
+                    <a href="/blog-list">Blogs</a>
                 </li>
             </ul>
             <ul class="footer-mobile-menu-second">
