--- a/src/app/our-team/our-team.component.html
+++ b/src/app/our-team/our-team.component.html
@@ -101,7 +101,7 @@
 </section>
 <section class="professional-team-section">
     <div class="container">
-        <div class="professional-team-wrap flex space-between">
+        <div class="professional-team-wrap flex_two">
             <div class="professional-team-text">
                 <h3 class="green-text">professional team</h3>
                 <h2 class="main-heading">Why We Different</h2>
@@ -110,14 +110,52 @@
                     <div class="progress-bar-wrap">
                         <h4 class="bar-text">Technical Skill</h4>
                        <div class="barra">
-                        <div class="barra-nivel" data-nivel="90%"></div>
+                        <div class="barra-nivel" data-nivel="90%">
+                        </div>
+                        <span class="barra-title-text">Great</span>
+                       </div>
+                    </div>
+                    <div class="progress-bar-wrap">
+                        <h4 class="bar-text">Technical Skill</h4>
+                       <div class="barra">
+                        <div class="barra-nivel" data-nivel="80%">
+                        </div>
+                        <span class="barra-title-text">Great</span>
+                       </div>
+                    </div>
+                    <div class="progress-bar-wrap">
+                        <h4 class="bar-text">Technical Skill</h4>
+                       <div class="barra">
+                        <div class="barra-nivel" data-nivel="95%">
+                        </div>
+                        <span class="barra-title-text">Great</span>
                        </div>
                     </div>
                 </div>
             </div>
             <div class="professional-team-cards">
                 <div class="professional-cards">
-
+                    <div class="our-card-wrap one">
+                        <div class="our-img-wrap">
+                            <img class="our-image" width="100%" src="../../assets/image/our-card-icon.png" alt="icon">
+                        </div>
+                        <h4 class="our-card-heading">Our Expertise</h4>
+                        <p class="our-text">Molestie interdum tristique cursus class eros elit natoque dui ut.</p>
+                    </div>
+                    <div class="our-card-wrap two">
+                        <div class="our-img-wrap">
+                            <img class="our-image" width="100%" src="../../assets/image/our-card-icon2.png" alt="icon">
+                        </div>
+                        <h4 class="our-card-heading">Our Quality</h4>
+                        <p class="our-text">Molestie interdum tristique cursus class eros elit natoque dui ut.</p>
+                    </div>
+                    <div class="our-card-wrap three">
+                        <div class="our-img-wrap">
+                            <img class="our-image" width="100%" src="../../assets/image/our-card-icon3.png" alt="icon">
+                        </div>
+                        <h4 class="our-card-heading">Our Innovation</h4>
+                        <p class="our-text">Molestie interdum tristique cursus class eros elit natoque dui ut.</p>
+                    </div>
                 </div>
             </div>
         </div>
