--- a/src/app/contact-us/contact-us.component.css
+++ b/src/app/contact-us/contact-us.component.css
@@ -100,6 +100,7 @@
     padding-left: 18.46px;
     border-radius: 5px;
     border: none;
+    outline: unset;
 }
 .contact-form-section .contact-form-wrap .contact_form .name-fields-wrap fieldset input:focus + .textfield__label,
 .contact-form-section .contact-form-wrap .contact_form .other-fields-wrap fieldset input:focus + .textfield__label,
