--- a/src/styles.css
+++ b/src/styles.css
@@ -221,6 +221,7 @@ body {
     line-height: 19px;
     text-transform: capitalize;
     font-family: var(--second-heading);
+    cursor: pointer;
 }
 .cdk-btn-white {
     width: 160px;
@@ -238,6 +239,7 @@ body {
     line-height: 19px;
     text-transform: capitalize;
     font-family: var(--second-heading);
+    cursor: pointer;
 }
 .cdk-btn-transparent {
     width: 160px;
@@ -256,6 +258,22 @@ body {
     line-height: 19px;
     text-transform: capitalize;
     font-family: var(--second-heading);
+    cursor: pointer;
+}
+.cdk-contact-btn {
+    width: 100%;
+    height: 51px;
+    border: none;
+    border-radius: 10px;
+    background: #37C8AE;
+    color: #000;
+    font-family: var(--second-heading);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 27px;
+    text-transform: uppercase;
+    cursor: pointer;
 }
 .mobile {
     display: none;
