Service detail page

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -70,10 +70,10 @@
                 <div class="footer_term_menu">
                     <ul class="term_menu flex">
                         <li class="term_list">
-                            <a href="#">Terms of Service</a>
+                            <a href="/terms">Terms of Service</a>
                         </li>
                         <li class="term_list">
-                            <a href="#">Privacy Policy</a>
+                            <a href="/privacy">Privacy Policy</a>
                         </li>
                     </ul>
                 </div>
@@ -136,10 +136,10 @@
             </ul>
             <ul class="footer-mobile-menu-second">
                 <li class="mobile-list">
-                    <a href="#">Terms of Service</a>
+                    <a href="/terms">Terms of Service</a>
                 </li>
                 <li class="mobile-list">
-                    <a href="#">Privacy & Policy</a>
+                    <a href="/privacy">Privacy & Policy</a>
                 </li>
             </ul>
         </div>
