--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -33,7 +33,7 @@
                                     <h2 class="mega-heading">services</h2>
                                     <ul class="drop-menu">
                                         <li class="drop-list">
-                                            <a href="/">UX/UI Design</a>
+                                            <a href="/service-details">UX/UI Design</a>
                                         </li>
                                         <li class="drop-list">
                                             <a href="/">shopify Web Development</a>
@@ -87,7 +87,7 @@
                         <div class="tabcontent">
                             <ul class="">
                                 <li class="drop-list">
-                                    <a href="/">UX/UI Design</a>
+                                    <a href="/service-details">UX/UI Design</a>
                                 </li>
                                 <li class="drop-list">
                                     <a href="/">shopify Web Development</a>
